# xsio

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/core/: bulk.rs  mod.rs  sockaddr.rs  sockdomains.rs  socket.rs  sockopts.rs  utils.rs
src/core/sys/: mod.rs  unix.rs  win32.rs
src/core/sys/unix/: bpf.rs  def.rs  mod.rs
src/core/sys/win32/: bpf.rs  def.rs  mod.rs
src/elf/: parser.rs
src/udp/: client.rs  flood.rs  mod.rs  server.rs
src/udp/server/: mod.rs  server.rs
src/udp/server/modes/: mod.rs
src/udp/server/modes/kernel/: mod.rs
src/udp/server/modes/pop/: mod.rs
src/udp/server/modes/popmany/: mod.rs
src/udp/server/worker/: mod.rs  worker.rs
src/udp/xdp/: build.sh  xdp.c
src/xdp/: loader.rs  mod.rs
tests/: Socket.rs  XUdpServer.rs  XUdpServer_Drain.rs  socket.rs
